Fix publisher detail alignment x2

--- a/src/components/03-components/file-summary/file-summary.scss
+++ b/src/components/03-components/file-summary/file-summary.scss
@@ -16,6 +16,9 @@
   }
 
   &__native-icon {
+    position: relative;
+    top: 5px;
+
     svg {
       width: 22px;
       height: auto;
